--- a/index.html
+++ b/index.html
@@ -10,9 +10,37 @@
 </head>
 <body>
     <div id="app">
+        <div class="logo">
+            <img src="img/logo.png" alt="">
+        </div>
 
+        <div class="area-input">
+            <input placeholder="Aggiungi una task">
+            <button>Aggiungi</button>
+            <div>
+                <span class="error-msg"></span>
+            </div>
+        </div>
 
-        
+        <div class="container">
+            <!-- qui bisogna creare il msg per farlo apparire quando sono finite le task -->
+
+            <ul class="list-tasks">
+                <li>
+                    <span>tasks</span>
+                    <i class="fa-solid fa-xmark"></i>
+                </li>
+                <li>
+                    <span>Tasks</span>
+                    <i class="fa-solid fa-xmark"></i>
+                </li>
+                <li>
+                    <span>Tasks</span>
+                    <i class="fa-solid fa-xmark"></i>
+                </li>
+            </ul>
+        </div>
+
     </div>
 
 
